--- a/privacy.html
+++ b/privacy.html
@@ -1,12 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Privacy Policy for Campus Cafe - Your privacy matters. Learn how we handle your data.">
+  <meta name="keywords" content="privacy policy, data security, food delivery">
+  <meta name="author" content="Shubham Kumar">
+  <title>Privacy Policy - Campus Cafe</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f4f6f9;
+      color: #333;
+      line-height: 1.6;
+      padding: 0;
+      margin: 0;
+    }
+
+    header {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 50px 0;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      font-weight: 600;
+    }
+
+    .content {
+      padding: 40px;
+      max-width: 800px;
+      margin: 0 auto;
+      background-color: white;
+      border-radius: 10px;
+      box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    }
+
+    .content h2 {
+      font-size: 1.8rem;
+      color: #3498db;
+      margin-bottom: 20px;
+      text-align: center;
+    }
+
+    .content p {
+      font-size: 1.1rem;
+      color: #555;
+      margin-bottom: 15px;
+      text-align: justify;
+    }
+
+    .content p:last-child {
+      margin-bottom: 30px;
+    }
+
+    .contact {
+      text-align: center;
+      margin-top: 30px;
+      font-size: 1.2rem;
+    }
+
+    .contact a {
+      color: #3498db;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
+    }
+
+    footer {
+      background-color: #2c3e50;
+      color: white;
+      text-align: center;
+      padding: 20px;
+      position: fixed;
+      width: 100%;
+      bottom: 0;
+    }
+
+    footer p {
+      font-size: 1rem;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 2rem;
+      }
+
+      .content h2 {
+        font-size: 1.5rem;
+      }
+
+      .content p {
+        font-size: 1rem;
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <h1>Privacy Policy</h1>
-  <p>We collect basic information like name, email, and order history to provide food delivery services. Your data is stored securely and not shared with third parties.</p>
-  <p>Contact us at: shubhamanuj652@gmail.com</p>
+  <header>
+    <h1>Campus Cafe Privacy Policy</h1>
+  </header>
+
+  <div class="content">
+    <h2>Privacy Statement</h2>
+    <p>At Campus Cafe, we are committed to protecting your privacy. This Privacy Policy outlines how we collect, use, and safeguard your personal information when you use our app.</p>
+
+    <h2>Information We Collect</h2>
+    <p>We collect the following types of information from users:</p>
+    <ul>
+      <li><strong>Personal Information:</strong> Name</li>
+      <li><strong>Order Information:</strong> Order history, delivery address, and payment details.</li>
+    </ul>
+
+    <h2>How We Use Your Information</h2>
+    <p>We use the information collected for the following purposes:</p>
+    <ul>
+      <li>To process and fulfill your food orders.</li>
+      <li>To communicate with you regarding your orders, updates, and promotions.</li>
+      <li>To improve the functionality of the app and enhance your user experience.</li>
+      <li>To send you marketing communications (if you have opted in to receive them).</li>
+    </ul>
+
+    <h2>Data Storage and Security</h2>
+    <p>All data is stored securely in encrypted databases and is protected against unauthorized access. We implement industry-standard security protocols to protect your personal information. However, please note that no method of electronic transmission or storage is 100% secure.</p>
+
+    <h2>Sharing Your Information</h2>
+    <p>We do not share your personal information with third parties, except in the following cases:</p>
+    <ul>
+      <li>With our trusted service providers who assist in operating the app and processing payments.</li>
+      <li>As required by law, such as to comply with legal obligations or protect the rights, property, and safety of others.</li>
+      <li>If you have given explicit consent to share your data with third parties.</li>
+    </ul>
+
+    <h2>Your Rights</h2>
+    <p>As a user, you have the following rights regarding your personal data:</p>
+    <ul>
+      <li>The right to access and view your personal information.</li>
+      <li>The right to request correction of inaccurate or incomplete information.</li>
+      <li>The right to request the deletion of your personal data, subject to certain conditions.</li>
+      <li>The right to opt out of marketing communications at any time.</li>
+    </ul>
+
+    <h2>Third-Party Links</h2>
+    <p>Our app may contain links to third-party websites or services. We are not responsible for the privacy practices of such third parties. We encourage you to review their privacy policies before sharing any personal information.</p>
+
+    <h2>Children's Privacy</h2>
+    <p>Our app is not intended for use by children under the age of 13. We do not knowingly collect personal information from children. If we discover that we have inadvertently collected personal information from a child, we will take steps to delete such information.</p>
+
+    <h2>Changes to This Privacy Policy</h2>
+    <p>We may update this Privacy Policy from time to time. We will notify you of any significant changes by posting the new Privacy Policy on this page. Please review this page regularly to stay informed of any updates.</p>
+
+    <h2>Contact Us</h2>
+    <div class="contact">
+      <p>If you have any questions or concerns regarding this Privacy Policy, please contact us at: <a href="mailto:shubhamanuj652@gmail.com">shubhamanuj652@gmail.com</a></p>
+    </div>
+  </div>
+
+  <footer>
+    <p>&copy; 2025 Campus Cafe. All Rights Reserved.</p>
+  </footer>
 </body>
+
 </html>
